27-July-2011 Michael Babker
+ Create the plugin