@@ -13,4 +13,29 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_GOOGLE_DESCRIPTION="Choose to disp
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_GOOGLE_LABEL="Display Google +1"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_TWITTER_DESCRIPTION="Choose to display a Twitter Share button"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_TWITTER_LABEL="Display Twitter Share"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_DESCRIPTION="Choose to display "_QQ_"Like"_QQ_" or "_QQ_"Recommend"_QQ_" on the button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_LABEL="Action for button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_OPTION_LIKE="Like"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_OPTION_RECOMMEND="Recommend"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_COLOR_DESCRIPTION="Select the color scheme for the Facebook button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_COLOR_LABEL="Color Scheme"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_COLOR_DARK="Dark"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_COLOR_LIGHT="Light"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FACES_DESCRIPTION="Choose to display profile pictures with the standard layout"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FACES_LABEL="Show Profile Pictures"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_DESCRIPTION="The font to use for the Facebook button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_LABEL="Font Type"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_ARIAL="Arial"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_LUCIDA_GRANDE="Lucida Grande"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_SEGOE_UI="Segoe UI"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_TAHOMA="Tahoma"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_TREBUCHET_MS="Trebuchet MS"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_FONT_OPTION_VERDANA="Verdana"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_DESCRIPTION="The layout for the like button; Standard for a social layout with additional text and pictures, Box for a layout with the like count above the button, and Button for a layout with the like count to the side of the button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_LABEL="Like Button Layout"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_OPTION_BOX="Box"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_OPTION_BUTTON="Button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_OPTION_STANDARD="Standard"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_SEND_DESCRIPTION="Include a Send button with the Like button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_SEND_LABEL="Show Send Button"
 PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display Twitter's Share, Google's +1, and Facebook's Like buttons"
